--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -40,3 +40,63 @@
 img, svg, video, canvas, audio, iframe, embed, object {
   display: initial;
 }
+
+html,
+body,
+#__next {
+  height: 100%;
+}
+
+html {
+  font-size: 82.5%;
+  font-family: sans-serif;
+  -webkit-text-size-adjust: 100%;
+}
+
+body {
+  background: white;
+  color: var(--textColor);
+  font-weight: 400;
+  min-height: 100%;
+  line-height: 1.5;
+  font-size: 14px;
+  font-family: var(--fontCommon);
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  font-family: var(--fontCommon);
+  font-weight: 700;
+}
+
+h1,
+h2,
+h3 {
+  line-height: 1.3;
+  margin-top: 20px;
+  margin-bottom: 10px;
+}
+
+h4,
+h5,
+h6 {
+  margin-top: 10px;
+  margin-bottom: 10px;
+}
+
+h2 {
+  font-size: 26px;
+  font-size: 1.8em;
+}
+
+h3 {
+  font-size: 24px;
+}
+
+h4 {
+  font-size: 18px;
+}
